ctm-sf-homeloan-app/main/default/objects/CreditAccount__c/CreditAccount__c.object-meta.xml
<CustomObject>
    <label>Credit Account</label>
    <nameField>
        <label>Credit Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>