ctm-sf-homeloan-app/main/default/objects/CreditAccount__c/fields/CreditScore__c.field-meta.xml
<CustomField>
    <fullName>CreditScore__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Credit Score</label>
    <referenceTo>CreditScore__c</referenceTo>
    <relationshipLabel>Credit Accounts</relationshipLabel>
    <relationshipName>Credit_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>